force-app/main/default/objects/Customer_Services_Visit_Report__c/Customer_Services_Visit_Report__c.object-meta.xml
<CustomObject>
    <description>Reports created after Customer Services have visited a customer</description>
    <label>Customer Services Visit Report</label>
    <nameField>
        <label>Customer Services Visit Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Services Visit Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>