force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Account_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Email__c</fullName>
    <description>Used to set for auto email alerts</description>
    <label>Account Manager Email</label>
    <type>Email</type>
</CustomField>