force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Additional_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Additional_Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Services Visit Reports (Additional Customer Contact)</relationshipLabel>
    <relationshipName>Customer_Services_Visit_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>