force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Additional_Encirc_Contact__c.field-meta.xml
<CustomField>
    <fullName>Additional_Encirc_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Encirc Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Services_Visit_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>