force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <label>Visit Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>