force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Amount_Filled__c.field-meta.xml
<CustomField>
    <fullName>Amount_Filled__c</fullName>
    <description>The amount of Bottles filled</description>
    <label>Amount Filled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>