force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Bottle__c.field-meta.xml
<CustomField>
    <fullName>Bottle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bottle</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Bottle__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Bottle__c</referenceTo>
    <relationshipLabel>Customer Services Visit Reports</relationshipLabel>
    <relationshipName>Customer_Services_Visit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>