force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Bursts_Breakages__c.field-meta.xml
<CustomField>
    <fullName>Bursts_Breakages__c</fullName>
    <description>How many bottles have burst/breakages per fill?</description>
    <label>Bursts/ Breakages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>