force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Container_name__c.field-meta.xml
<CustomField>
    <fullName>Container_name__c</fullName>
    <inlineHelpText>Product name as per label if available</inlineHelpText>
    <label>Container name</label>
    <type>TextArea</type>
</CustomField>