force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Customer_AQL__c.field-meta.xml
<CustomField>
    <fullName>Customer_AQL__c</fullName>
    <inlineHelpText>Customer acceptable quality level</inlineHelpText>
    <label>Target AQL</label>
    <length>250</length>
    <type>Text</type>
</CustomField>