force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Services Visit Reports</relationshipLabel>
    <relationshipName>Customer_Services_Visit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>