force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Services Visit Reports</relationshipLabel>
    <relationshipName>Customer_Technical_Visit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>