force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Customer_Site__c.field-meta.xml
<CustomField>
    <fullName>Customer_Site__c</fullName>
    <label>Customer Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>