force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <inlineHelpText>Date of visit</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>