force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/DOM__c.field-meta.xml
<CustomField>
    <fullName>DOM__c</fullName>
    <inlineHelpText>Date of Manufacture</inlineHelpText>
    <label>DOM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>