force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Encirc_contact__c.field-meta.xml
<CustomField>
    <fullName>Encirc_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Customer Service contact</inlineHelpText>
    <label>Encirc contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Services_Visit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>