force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Filling_Line__c.field-meta.xml
<CustomField>
    <fullName>Filling_Line__c</fullName>
    <label>Filling line:</label>
    <type>TextArea</type>
</CustomField>