force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Information__c.field-meta.xml
<CustomField>
    <fullName>Information__c</fullName>
    <label>Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>