force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Manufacturing_Line__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Line__c</fullName>
    <inlineHelpText>Which Encirc line was the container made on</inlineHelpText>
    <label>Manufacturing Line:</label>
    <type>TextArea</type>
</CustomField>