force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Mould_Reference__c.field-meta.xml
<CustomField>
    <fullName>Mould_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Drawing number</inlineHelpText>
    <label>Mould Reference:</label>
    <referenceTo>Drawing__c</referenceTo>
    <relationshipLabel>Customer Services Visit Reports</relationshipLabel>
    <relationshipName>Customer_Services_Visit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>