force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Name_Formula__c</fullName>
    <formula>Customer_Name__r.Name &amp;&quot; - &quot; &amp;IF(NOT(ISBLANK(Customer_Site__c )), Customer_Site__c &amp;&quot; - &quot;,&quot;&quot;)&amp;&quot; Line: &quot;&amp;  Filling_Line__c &amp; &quot;  -  &quot; &amp; TEXT(Day(Date__c))&amp;&quot;/&quot;&amp;TEXT(MONTH(Date__c))&amp;&quot;/&quot;&amp;TEXT(YEAR(Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Formula</label>
    <type>Text</type>
</CustomField>