force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Pack_Spec__c.field-meta.xml
<CustomField>
    <fullName>Pack_Spec__c</fullName>
    <label>Pack Spec</label>
    <type>TextArea</type>
</CustomField>