force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Pallet_Range_Being_Processed__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Range_Being_Processed__c</fullName>
    <label>Pallet Range Being Processed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>