force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Performance_Rate__c.field-meta.xml
<CustomField>
    <fullName>Performance_Rate__c</fullName>
    <description>Used in the traffic light formula to show the colour picked here in reports, etc</description>
    <label>Performance Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>