force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Performance_Rate_RAG__c.field-meta.xml
<CustomField>
    <fullName>Performance_Rate_RAG__c</fullName>
    <formula>IMAGE( 
CASE( Performance_Rate__c , 
&quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;,
&quot;Amber&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;status color&quot;)</formula>
    <label>Performance Rate RAG</label>
    <type>Text</type>
</CustomField>