force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Photographs__c.field-meta.xml
<CustomField>
    <fullName>Photographs__c</fullName>
    <label>Photographs</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>