force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>Plant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Derrylin</fullName>
            </value>
            <value>
                <fullName>Elton</fullName>
            </value>
            <value>
                <fullName>Corsico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>