force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Purpose_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Visit__c</fullName>
    <inlineHelpText>Leave this blank until your ready to send the email report</inlineHelpText>
    <label>Purpose of Visit</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>