force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Report_Complete__c.field-meta.xml
<CustomField>
    <fullName>Report_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box sends the finished report email</description>
    <inlineHelpText>Checking this box sends the finished report email</inlineHelpText>
    <label>Report Complete</label>
    <type>Checkbox</type>
</CustomField>