force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Sales_Admin__c.field-meta.xml
<CustomField>
    <fullName>Sales_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Services_Visit_Reports4</relationshipName>
    <type>Lookup</type>
</CustomField>