force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/SAP_Material_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Material_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>This is the pack spec number which is the last five numbers after the underscore on the pallet label.</inlineHelpText>
    <label>SAP Material Code</label>
    <referenceTo>SAP_Material_Code__c</referenceTo>
    <relationshipLabel>Customer Services Visit Reports</relationshipLabel>
    <relationshipName>Customer_Services_Visit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>