force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Senior_Sales_Admin__c.field-meta.xml
<CustomField>
    <fullName>Senior_Sales_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Senior Sales Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Services_Visit_Reports3</relationshipName>
    <type>Lookup</type>
</CustomField>