force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/VIP_Customer__c.field-meta.xml
<CustomField>
    <fullName>VIP_Customer__c</fullName>
    <label>VIP Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>