force-app/main/default/objects/Customer_Services_Visit_Report__c/fields/Works_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Works_Order_Number__c</fullName>
    <label>Works Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>