force-app/main/default/objects/Customer_Services_Visit_Report__c/validationRules/Report_Complete_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Report_Complete_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW(), Report_Complete__c=true)</errorConditionFormula>
    <errorMessage>Report Complete can&apos;t be checked on record creation.</errorMessage>
</ValidationRule>