force-app/main/default/objects/Customer_Services_Visit_Report__c/listViews/John_Wight2.listView-meta.xml
<ListView>
    <fullName>John_Wight2</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Date__c</columns>
    <columns>Encirc_contact__c</columns>
    <columns>Purpose_of_Visit__c</columns>
    <columns>Mould_Reference__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Report_Complete__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SAP_Material_Code__c</field>
        <operation>equals</operation>
        <value>19725</value>
    </filters>
    <label>Vicky working list</label>
</ListView>