force-app/main/default/objects/Customer_Services_Visit_Report__c/listViews/My_Customer_Services_Visit_Reports.listView-meta.xml
<ListView>
    <fullName>My_Customer_Services_Visit_Reports</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Date__c</columns>
    <columns>Encirc_contact__c</columns>
    <columns>Purpose_of_Visit__c</columns>
    <columns>Mould_Reference__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Report_Complete__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Customer Services Visit Reports</label>
</ListView>